--- a/_posts/2018-03-13-ipython一种交互式计算和开发环境.md
+++ b/_posts/2018-03-13-ipython一种交互式计算和开发环境.md
@@ -1,4 +1,12 @@
+---
+layout: post
+title: iPython基础
+categories: 博客
+comments: true
+---
+
 ## iPython基础
+
 **ipython**的核心功能是交互，您可以在`shell`中输入ipython notebook来进行开发和测试
 若想要`ipython notebook`同时使用`python2`和`python3`,可以使用如下命令
 ```python
